--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.5.2",
+    "@types/bcryptjs": "^2.4.5",
+    "bcryptjs": "^2.4.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
