--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.5.2",
-    "@types/bcryptjs": "^2.4.5",
     "bcryptjs": "^2.4.3",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zod": "^3.22.4",
@@ -34,8 +34,10 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^3.0.13",
     "eslint": "^8.51.0",
     "prisma": "^5.5.2",
     "source-map-support": "^0.5.21",
