--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:cov": "vitest run --coverage",
+    "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+    "test:e2e": "vitest run --config ./vitest.config.e2e.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.2.8",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/core": "^10.2.8",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.2.8",
     "@prisma/client": "^5.5.2",
     "bcryptjs": "^2.4.3",
     "passport-jwt": "^4.0.1",
@@ -30,19 +35,24 @@
     "zod-validation-error": "^2.1.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.2.8",
     "@rocketseat/eslint-config": "^2.1.0",
+    "@swc/core": "^1.3.96",
     "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.3.1",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.9.0",
     "@types/passport-jwt": "^3.0.13",
-    "eslint": "^8.51.0",
+    "@vitest/coverage-v8": "^0.34.6",
+    "eslint": "^8.53.0",
     "prisma": "^5.5.2",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2",
+    "unplugin-swc": "^1.4.3",
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^0.34.6"
   }
 }
