--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.2.8",
     "@prisma/client": "^5.5.2",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.10",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -35,6 +36,7 @@
     "zod-validation-error": "^2.1.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.2.0",
     "@nestjs/cli": "^10.2.1",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.2.8",
@@ -53,7 +55,7 @@
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2",
+    "typescript": "^5.1.6",
     "unplugin-swc": "^1.4.3",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.6"
